# paczki-cpp

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml
assets/: 110711121_minlp_2.json  test_case_1.json
cmake/: packet_viewer.cmake  paczki_lib.cmake  paczki_plusplus.cmake  tests.cmake
include/: box_def.h  camera.h  colors.h  emscripten_wrapper.h  json_loader.h  json_utils.h  misc.h  state_base.h  vec3_utils.h
include/bind/: bind.h  stores.h
include/box/: definition.h  instance.h  list.h
include/graphics/: box.h
include/lib/: emscripten_wrapper.h  raylib_clean.h
include/math/: bounding_box.h  color.h  vector2.h  vector3.h
include/packet_viewer/: data.h  state.h
include/pallet_viewer/: state.h
include/rendering/: camera.h  mode_3d.h
include/schema/: box_pos.h  box_type.h  data.h  sku.h
include/ui/: cursor_3d.h  drawable.h  handlers.h  helpers.h  keyboard.h  pallet_view.h  rotator.h
include/utils/: png.h
notatki/: 211014.md  220411.md
src/: canvas.cc  json_loader.cc  json_utils.cc  main.cc  main.cpp  packet_viewer.cc  test_json.cc
src/bind/: bind.cc  stores.cc
src/box/: definition.cc  instance.cc  list.cc
src/graphics/: box.cc
src/lib/: raymath_implementation.cc
src/packet_viewer/: state.cc
src/pallet_viewer/: state.cc
src/rendering/: mode_3d.cc
src/schema/: box_pos.cc  box_type.cc  data.cc  sku.cc
src/ui/: cursor_3d.cc  handlers.cc  pallet_view.cc  rotator.cc
src/utils/: png.cc
tests/: json_load.cc
